--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "isomorphic-fetch": "^2.1.1",
     "react": "^0.14.0",
     "react-redux": "^3.1.0",
+    "react-dom": "latest",
     "redux": "^3.0.0",
     "redux-logger": "^2.0.2",
     "redux-thunk": "^1.0.0"
