--- a/package.json
+++ b/package.json
@@ -27,18 +27,31 @@
   },
   "homepage": "",
   "dependencies": {
-    "isomorphic-fetch": "^2.1.1",
-    "react": "^0.14.0",
+    "react": "^0.14.2",
     "react-redux": "^3.1.0",
-    "react-dom": "latest",
+    "react-dom": "^0.14.2",
     "redux": "^3.0.0",
     "redux-logger": "^2.0.2",
-    "redux-thunk": "^1.0.0"
+    "redux-thunk": "^1.0.0",
+    "classnames": ">=2.1.2",
+    "babel-runtime": ">=5.1.11",
+
+
+    "react-tap-event-plugin": "^0.2.1",
+    "material-ui": "^0.13.2",
+    "flexboxgrid": "^6.3.0",
+    "react-flexbox-grid": "^0.1.0",
+
+    "isomorphic-fetch": "^2.1.1"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
+    "babel-eslint": "^4.1.5",
     "babel-loader": "^5.1.4",
     "babel-plugin-react-transform": "^1.1.0",
+    "eslint": "^1.9.0",
+    "eslint-config-airbnb": "^1.0.0",
+    "eslint-plugin-react": "^3.8.0",
     "expect": "^1.6.0",
     "express": "^4.13.3",
     "jsdom": "^6.5.1",
@@ -46,8 +59,17 @@
     "mocha-jsdom": "^1.0.0",
     "node-libs-browser": "^0.5.2",
     "react-transform-hmr": "^1.0.0",
-    "webpack": "^1.9.11",
+    "webpack": "^1.12.6",
     "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.2.0"
+    "webpack-hot-middleware": "^2.2.0",
+
+
+    "autoprefixer": "^6.0.3",
+    "css-loader": "^0.23.0",
+    "extract-text-webpack-plugin": "^0.9.0",
+    "node-sass": "^3.4.1",
+    "postcss-loader": "^0.8.0",
+    "sass-loader": "^3.1.1",
+    "style-loader": "^0.13.0"
   }
 }
